fix overflow ui issues on mobile screens

--- a/src/scss/components/main-navbar/main-drawer-mobile.module.scss
+++ b/src/scss/components/main-navbar/main-drawer-mobile.module.scss
@@ -1,7 +1,7 @@
 @use '../../variables/main.scss' as variables;
 
 .root {
-  position: absolute;
+  position: fixed;
   height: 100%;
   width: 85%;
   top: 0;
