--- a/src/scss/components/main-navbar/main-navbar.module.scss
+++ b/src/scss/components/main-navbar/main-navbar.module.scss
@@ -34,8 +34,8 @@
 
     background-color: transparent;
     border: none;
-    height: 5rem;
-    width: 5rem;
+    height: 4rem;
+    width: 4rem;
 
     align-items: center;
     justify-content: center;
@@ -44,8 +44,8 @@
 
 .togglerIcon {
   background-color: variables.$color-gray-dark;
-  width: 3.5rem;
-  height: 4px;
+  width: 3rem;
+  height: 3.5px;
   border-radius: 10px;
   position: relative;
 
@@ -55,8 +55,8 @@
     content: '';
     display: block;
     background-color: variables.$color-gray-dark;
-    width: 3.5rem;
-    height: 4px;
+    width: 3rem;
+    height: 3.5px;
     border-radius: 10px;
   }
 
