--- a/src/scss/pages/home/home.module.scss
+++ b/src/scss/pages/home/home.module.scss
@@ -62,7 +62,7 @@
   }
 
   @include mixins.respond(phone-sm) {
-    font-size: 3.25rem;
+    font-size: 3.5rem;
   }
 }
 
